--- a/Phase1/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase1/GameCentre/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SlidingTiles</string>
+    <string name="textview">TextView</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
 </resources>
