--- a/Phase1/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase1/GameCentre/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="textview">TextView</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="ScoreText">Score</string>
 </resources>
