- Created and Implemented a Save Button on the Game Screen - Created an Undo Button on the Game Screen - Added 'Save' and 'Auto Save' attributes to the 'UserAccount' class - Changed Accent and Primary Dark Colors

--- a/Phase1/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase1/GameCentre/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="ScoreText">Score</string>
+    <string name="SaveText">Save</string>
+    <string name="UndoText">Undo</string>
     <string name="button_newAccount">Create Account</string>
     <string name="button_login">Sign in</string>
     <string name="button_guest">Play As Guest</string>
