--- a/Phase1/GameCentre/app/src/main/res/values/strings.xml
+++ b/Phase1/GameCentre/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="name"></string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
